2000-10-11  Sven Wischnowsky  <wischnow@zsh.org>

	* 12959: Src/Zle/compcore.c, Src/Zle/complist.c: make user defined
 	completion widgets leave menu selection without accepting the
 	currently selected match
	
2000-10-10  Sven Wischnowsky  <wischnow@zsh.org>

	* 12948: Completion/Core/_expand: follow-up to 12942, only a
 	missing redirection
	
	* 12946: Completion/Base/_math, Completion/Base/_subscript,
 	Completion/Builtins/_vars, Completion/Builtins/_zstyle,
 	Completion/Core/_parameters, Doc/Zsh/compsys.yo: add
 	fake-parameters style to allow completing parameters which are not
 	yet set
	
	* 12942,12945: Completion/Core/_expand: temporarily remove global
 	aliases to avoid error message inside the evals
	
	* 12941: Src/Zle/compmatch.c: follow-up to 12930, make it first
 	try exact character matches, but enable it to go back to try match
 	specs if it fails after accepting such character matches
	
2000-10-09  Sven Wischnowsky  <wischnow@zsh.org>

	* 12930: Src/Zle/compmatch.c: prefer exact character matches over
 	match specs (so that `nom' can match `nomatch' in _options)
	
2000-10-06  Sven Wischnowsky  <wischnow@zsh.org>

	* 12919: Completion/User/_tiff, Completion/X/_xv: search for *.tif
 	files, too
	
	* 12917: Completion/Bsd/_bsd_pkg, Completion/Bsd/_kld,
 	Completion/Builtins/_autoload, Completion/Builtins/_cd,
 	Completion/Builtins/_compdef, Completion/Builtins/_popd,
 	Completion/Core/_expand, Completion/Core/_path_files,
 	Completion/Linux/_rpm, Completion/User/_gcc, Completion/User/_gdb,
 	Completion/User/_mailboxes, Completion/User/_man,
 	Completion/User/_perl_modules, Completion/User/_printers,
 	Completion/User/_zdump: more option setting cleanup; remove some
 	unnecessary setopts, remove N qualifiers
	
2000-10-05  Bart Schaefer  <schaefer@zsh.org>

	* 12912: Completion/Commands/_bash_completions,
	Completion/Commands/_complete_debug,
	Completion/Commands/_complete_help,
	Completion/Commands/_correct_word,
	Completion/Commands/_expand_word,